Fix wrong margin

--- a/assets/src/css/site/_basics.scss
+++ b/assets/src/css/site/_basics.scss
@@ -29,6 +29,12 @@ body {
 }
 
 
+body .is-layout-flow > * + * {
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+}
+
+
 *,
 *::before,
 *::after {
